--- a/src/app/user/login/login.component.html
+++ b/src/app/user/login/login.component.html
@@ -21,7 +21,7 @@
 
     <p class="signup-text">
       Don’t Have an Account?
-      <a href="#">Sign Up</a>
+      <a [routerLink]="'/user/register'">Sign Up</a>
     </p>
   </div>
 </div>
