Sidebar & icon css done

--- a/src/app/expense/home/home.component.html
+++ b/src/app/expense/home/home.component.html
@@ -1,2 +1,6 @@
-<app-sidebar></app-sidebar>
-<p>home works!</p>
+<div class="layout">
+  <app-sidebar></app-sidebar>
+  <div class="main-content">
+    <p>Home works!</p>
+  </div>
+</div>
