--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -1,13 +1,23 @@
-<div class="sidebar">
-  <h2>Menu</h2>
-  <ul>
-    <li><a routerLink="/dashboard">Dashboard</a></li>
-    <li><a routerLink="/profile">Profile</a></li>
-    <li><a routerLink="/settings">Settings</a></li>
-    <li><a routerLink="/logout">Logout</a></li>
-  </ul>
-</div>
+<div class="sidebar" [class.collapsed]="isCollapsed">
+  <button class="toggle-btn" (click)="toggleSidebar()">☰</button>
 
-<div class="content">
- 
+  <div class="sidebar-header">
+    <div class="logo-section">
+      <img src="../../../assets/Menu-icons/expenses.png" alt="Logo" class="logo-img" /> 
+      <!-- <div class="logo-title">Expense IQ</div> -->
+    </div>
+  </div>
+
+  <div class="menu">
+    <ul class="nav">
+      <li><img src="../../../assets/Menu-icons/dashboard1.png" class="menu-img"> <span class="link-text">Dashboard</span></li>
+        <div class="divider"></div>
+       <li><img src="../../../assets/Menu-icons/Recurring.png" class="menu-img"> <span class="link-text">Recurring</span></li>
+           <div class="divider"></div>
+       <li><img src="../../../assets/Menu-icons/stats.png" class="menu-img"> <span class="link-text">Stats</span></li>
+       <div class="divider"></div>
+       <li><img src="../../../assets/Menu-icons/settings.png" class="menu-img"> <span class="link-text">Settings</span></li>
+       <div class="divider"></div>
+    </ul>
+  </div>
 </div>
