--- a/src/app/user/login/login.component.css
+++ b/src/app/user/login/login.component.css
@@ -120,7 +120,7 @@ input[type="text"] {
 .submit-btn {
   width: 100%;
   padding: 10px;
-  background-color: black;
+  background-color: #251266;
   color: white;
   border: none;
   border-radius: 6px;
