--- a/src/app/user/login/login.component.html
+++ b/src/app/user/login/login.component.html
@@ -7,7 +7,7 @@
     <p>Let’s get you signed in securely.</p>
 
     <form>
-      <input formControlName="email" type="email" placeholder="Email Address" />
+      <input formControlName="UserName" type="text" placeholder="Username" />
       <input formControlName="password" type="password" placeholder="Password" />
      
       <button type="submit" class="submit-btn">Log In</button>
