--- a/src/app/user/register/register.component.html
+++ b/src/app/user/register/register.component.html
@@ -7,6 +7,8 @@
     <p>Let’s get you signed in securely.</p>
 
     <form>
+      <input formControlName="Firstname" type="text" placeholder="Firstname" />
+      <input formControlName="Lastname" type="text" placeholder="Lastname" />
       <input formControlName="UserId" type="text" placeholder="UserName" />
       <input formControlName="Email" type="Email" placeholder="Email" />
       <input formControlName="Password" type="password" placeholder="Password" />
