--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -10,13 +10,13 @@
 
   <div class="menu">
     <ul class="nav">
-      <li><img src="../../../assets/Menu-icons/dashboard.png" class="menu-img"> <span class="link-text">Dashboard</span></li>
+      <li><img src="../../../assets/Menu-icons/dashboard.png" class="menu-img"> <a (click)="navigatetodashboard()" class="link-text">Dashboard</a></li>
         <div class="divider"></div>
-       <li><img src="../../../assets/Menu-icons/Recurring.png" class="menu-img"> <span class="link-text">Recurring</span></li>
+       <li><img src="../../../assets/Menu-icons/Recurring.png" class="menu-img"> <a (click)="navigatetoRecurring()" class="link-text">Recurring</a></li>
            <div class="divider"></div>
-       <li><img src="../../../assets/Menu-icons/stats.png" class="menu-img"> <span class="link-text">Stats</span></li>
+       <li><img src="../../../assets/Menu-icons/stats.png" class="menu-img"> <a (click)="navigatetostats()" class="link-text">Stats</a></li>
        <div class="divider"></div>
-       <li><img src="../../../assets/Menu-icons/settings.png" class="menu-img"> <span class="link-text">Settings</span></li>
+       <li><img src="../../../assets/Menu-icons/settings.png" class="menu-img"> <a (click)="navigatetosettings()" class="link-text">Settings</a></li>
        <div class="divider"></div>
     </ul>
   </div>
