revamp for routing

--- a/src/app/expense/settings/settings.component.html
+++ b/src/app/expense/settings/settings.component.html
@@ -1,6 +1,5 @@
 <div class="layout">
-  <app-sidebar></app-sidebar>
   <div class="main-content">
-    <p>Settings works!</p>
+    <p>settings works!</p>
   </div>
 </div>
