--- a/src/app/expense/sidebar/sidebar.component.css
+++ b/src/app/expense/sidebar/sidebar.component.css
@@ -38,6 +38,7 @@
 .menu-img {
   width: 30px;
   height: 30px;
+  color: white;
 }
 
 
@@ -128,4 +129,17 @@
 .divider span {
   padding: 0 10px;
   font-size: 14px;
+}
+
+.layout {
+  display: flex;
+  height: 100vh;
+  width: 100%;
+}
+
+.main-content {
+  flex: 1;
+  padding: 20px;
+  overflow-y: auto;
+  background-color: #f5f5f5; /* Optional */
 }
