--- a/src/app/expense/stats/stats.component.html
+++ b/src/app/expense/stats/stats.component.html
@@ -1,6 +1,5 @@
 <div class="layout">
-  <app-sidebar></app-sidebar>
   <div class="main-content">
-    <p>Stats works!</p>
+    <p>stats works!</p>
   </div>
 </div>
