--- a/src/app/user/login/login.component.html
+++ b/src/app/user/login/login.component.html
@@ -6,11 +6,11 @@
     <h2>Expense IQ</h2>
     <p>Let’s get you signed in securely.</p>
 
-    <form>
+    <form [formGroup]="LoginForm">
       <input formControlName="UserName" type="text" placeholder="Username" />
       <input formControlName="password" type="password" placeholder="Password" />
      
-      <button type="submit" class="submit-btn">Log In</button>
+      <button type="submit" class="submit-btn" (click)="LoginUser()">Log In</button>
     </form>
     <!-- <div class="divider"><span>Or</span></div>
     <button class="login-btn google-btn">
