--- a/src/app/expense/sidebar/sidebar.component.html
+++ b/src/app/expense/sidebar/sidebar.component.html
@@ -12,7 +12,7 @@
   <div class="sidebar">
     <div class="sidebar-header">
       <div class="logo-section">
-        <img src="../../../assets/Menu-icons/expenses.png" alt="Logo" class="logo-img" />
+        <img src="../../../assets/logo.png" alt="Logo" class="logo-img" />
       </div>
     </div>
 
@@ -27,6 +27,12 @@
         <li routerLink="recurring">
           <img src="../../../assets/Menu-icons/Recurring.png" class="menu-img" />
           <span class="link-text">Recurring</span>
+        </li>
+        <div class="divider"></div>
+
+         <li routerLink="wallet">
+          <img src="../../../assets/Menu-icons/wallet.png" class="menu-img" />
+          <span class="link-text">Wallet</span>
         </li>
         <div class="divider"></div>
 
