--- a/src/app/user/login/login.component.html
+++ b/src/app/user/login/login.component.html
@@ -1,7 +1,7 @@
 <div class="login-container">
   <div class="login-box">
     <div class="logo">
-      <img src="../../../assets/icon.png">
+      <img src="../../../assets/logo.png">
     </div>
     <h2>Expense IQ</h2>
     <p>Let’s get you signed in securely.</p>
