--- a/src/app/expense/sidebar/sidebar.component.html
+++ b/src/app/expense/sidebar/sidebar.component.html
@@ -1,48 +1,39 @@
-<!-- <nav>
-  <ul>
-    <li><a routerLink="dashboard">Dashboard</a></li>
-    <li><a routerLink="recurring">Recurring</a></li>
-    <li><a routerLink="stats">Stats</a></li>
-    <li><a routerLink="settings">Settings</a></li>
-  </ul>
-</nav>
-<router-outlet></router-outlet> -->
 <div class="layout">
   <!-- Sidebar -->
   <div class="sidebar">
     <div class="sidebar-header">
-      <div class="logo-section">
-        <img src="../../../assets/logo.png" alt="Logo" class="logo-img" />
-      </div>
+     
+        <!-- <img src="../../../assets/logo.png" alt="Logo" class="logo-img" /> -->
+        Welcome User !
     </div>
 
     <div class="menu">
       <ul class="nav">
-        <li routerLink="dashboard">
+        <li routerLink="dashboard" routerLinkActive="active-menu" [ngClass]="{ 'active-menu': isActive('/dashboard') }">
           <img src="../../../assets/Menu-icons/dashboard.png" class="menu-img" />
           <span class="link-text">Dashboard</span>
         </li>
         <div class="divider"></div>
 
-        <li routerLink="recurring">
+        <li routerLink="recurring" routerLinkActive="active-menu" [ngClass]="{ 'active-menu': isActive('/recurring') }">
           <img src="../../../assets/Menu-icons/Recurring.png" class="menu-img" />
           <span class="link-text">Recurring</span>
         </li>
         <div class="divider"></div>
 
-         <li routerLink="wallet">
+        <li routerLink="wallet" routerLinkActive="active-menu" [ngClass]="{ 'active-menu': isActive('/wallet') }">
           <img src="../../../assets/Menu-icons/wallet.png" class="menu-img" />
           <span class="link-text">Wallet</span>
         </li>
         <div class="divider"></div>
 
-        <li routerLink="stats">
+        <li routerLink="stats" routerLinkActive="active-menu" [ngClass]="{ 'active-menu': isActive('/stats') }">
           <img src="../../../assets/Menu-icons/stats.png" class="menu-img" />
           <span class="link-text">Stats</span>
         </li>
         <div class="divider"></div>
 
-        <li routerLink="settings">
+        <li routerLink="settings" routerLinkActive="active-menu" [ngClass]="{ 'active-menu': isActive('/settings') }">
           <img src="../../../assets/Menu-icons/settings.png" class="menu-img" />
           <span class="link-text">Settings</span>
         </li>
@@ -56,43 +47,3 @@
     <router-outlet></router-outlet>
   </div>
 </div>
-
-
-<!-- sidebar.component.html -->
-<!-- <div class="layout">
-  <div class="sidebar" >
-    <div class="sidebar-header">
-      <div class="logo-section">
-        <img src="../../../assets/Menu-icons/expenses.png" alt="Logo" class="logo-img" /> 
-      </div>
-    </div>
-
-    <div class="menu">
-      <ul class="nav">
-        <li routerLink="dashboard">
-          <span src="../../../assets/Menu-icons/dashboard.png" class="menu-img"> </span>
-          <span class="link-text">Dashboard</span>
-        </li>
-        <div class="divider"></div>
-        <li routerLink="recurring" >
-          <span src="../../../assets/Menu-icons/Recurring.png" class="menu-img"> </span>
-          <span  class="link-text">Recurring</span>
-        </li>
-        <div class="divider"></div>
-        <li routerLink="stats" >
-          <span src="../../../assets/Menu-icons/stats.png" class="menu-img"> </span>
-          <span   class="link-text">Stats</span>
-        </li>
-        <div class="divider"></div>
-        <li routerLink="settings">
-          <span src="../../../assets/Menu-icons/settings.png" class="menu-img"></span>
-          <span   class="link-text">Settings</span>
-        </li>
-        <div class="divider"></div>
-      </ul>
-    </div>
-  </div>
-<router-outlet></router-outlet>
-  
-</div> -->
-
