Wallet Created and Event Emitter

--- a/src/app/expense/wallet/wallet.component.html
+++ b/src/app/expense/wallet/wallet.component.html
@@ -73,6 +73,6 @@
   </div>
 
   <!-- Create Wallet Modal -->
-  <app-create-wallet #createWalletModal ></app-create-wallet>
+  <app-create-wallet #createWalletModal (walletCreated)="onWalletCreated($event)"></app-create-wallet> >
 
 </div>
