--- a/src/app/expense/wallet/wallet.component.html
+++ b/src/app/expense/wallet/wallet.component.html
@@ -29,7 +29,7 @@
 
   <!-- Wallet Grid -->
   <div class="wallet-grid">
-    <div *ngFor="let wallet of wallets" class="wallet-item">
+    <div *ngFor="let wallet of filteredWallets()" class="wallet-item">
 
       <!-- Top Row: Icon + Name + Type + Edit -->
       <div class="wallet-header-row">
@@ -73,6 +73,6 @@
   </div>
 
   <!-- Create Wallet Modal -->
-  <app-create-wallet #createWalletModal (walletCreated)="onWalletCreated($event)"></app-create-wallet> >
+  <app-create-wallet #createWalletModal (walletCreated)="onWalletCreated($event)"></app-create-wallet> 
 
 </div>
